- Fixed bug #49354 (mb_strcut() cuts wrong length when offset is within a   multibyte character).

(This bug was introduced by the commit by r202895. Please double-check the
 specification of the function you are going to *fix*.)


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@288613 c90b9560-bf6c-de11-be94-00142212c4b1